--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Deskripsi website Anda">
-    <title>Poliklinik Hewan</title>
+    <title>Andara Vet Clinic</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -38,14 +38,21 @@
     <!-- Header -->
     <header class="hero-section text-white text-center">
         <div class="container">
-            <h1 class="display-4">Poliklinik Dokter Hewan Andara Vet</h1>
-            <p class="lead">Memberikan Pelayanan Kesehatan Yang Lengkap Untuk Anabul Anda</p>
-            <a href="https://wa.me/628170791919?text=Halo,%20saya%20ingin%20bertanya%20tentang%20layanan%20Andara%20Vet." target="_blank" class="btn btn-primary btn-lg">
-   Hubungi Andara Vet
-</a>
-
+            <!-- <h1 class="display-4">Poliklinik Dokter Hewan Andara Vet</h1>
+            <p class="lead">Memberikan Pelayanan Kesehatan Yang Lengkap Untuk Anabul Anda</p> -->
+            <a href="https://wa.me/628170791919?text=Halo,%20saya%20ingin%20bertanya%20tentang%20layanan%20Andara%20Vet." target="_blank" class="btn btn-primary btn-lg btn-margin">
+               Hubungi Andara Vet
+            </a>
         </div>
     </header>
+
+    <!-- Poster Promosi -->
+    <section id="poster-promosi" class="text-center my-5">
+        <div class="container">
+            <img src="img/Promo.png" class="img-fluid rounded" alt="Poster Promosi Klinik">
+        </div>
+    </section>
+
 
     <!-- Layanan Kami Section -->
     <section id="services" class="py-5">
@@ -53,12 +60,13 @@
             <div class="row mb-5">
                 <!-- Layanan 1 -->
                 <div class="col-lg-6">
-                    <h2 class="mb-3">Menjaga Anabul Anda 7 Hari X 24 Jam Non Stop</h2>
+                    <h2 class="mb-3">Selamat Datang di Andara Vet Clinic!</h2>
                     <p>
-                        Tim Dokter Hewan Klinik Andara Vet siap untuk melayani dan menjaga anabul Anda 7 hari dalam seminggu, penuh 24 jam dalam sehari saat anabul Anda menikmati layanan Pet Hotel dan Rawat Inap Andara Vet.
+                        Andara Vet Clinic memahami betapa berharganya hewan kesayangan Anda. Di Klinik Hewan Andara, kami berfokus pada akurasi diagnosa dan ketepatan penanganan untuk memastikan kesehatan optimal bagi hewan peliharaan Anda. Dengan tim dokter hewan berpengalaman
+                        dan teknologi medis terkini, kami memberikan perawatan terbaik agar hewan kesayangan Anda tetap sehat, aktif, dan bahagia.
                     </p>
                     <p>
-                        Disertai dengan laporan mengenai keadaan anabul Anda secara berkala, yang di informasikan oleh Tim Dokter hewan yang bertugas dan sesuai dengan keadaan yang sebenarnya.
+                        Kami siap mendampingi Anda dalam menjaga kesejahteraan hewan peliharaan, dari pemeriksaan rutin hingga perawatan darurat. Percayakan kesehatan mereka kepada kami!
                     </p>
                     <a href="https://wa.me/628170791919?text=Halo,%20saya%20ingin%20bertanya%20tentang%20layanan%20Andara%20Vet." target="_blank" class="btn btn-outline-success">
                         Hubungi Andara Vet
@@ -66,20 +74,21 @@
                 </div>
                 <!-- Gambar Layanan 1 -->
                 <div class="col-lg-6 text-center">
-                    <img src="img/paw3.jpg" alt="Layanan 1" class="img-fluid rounded shadow">
+                    <img src="img/LSCP2.png" alt="Layanan 1" class="img-fluid rounded shadow">
                 </div>
             </div>
             <div class="row">
                 <!-- Gambar Layanan 2 -->
                 <div class="col-lg-6 text-center">
-                    <img src="img/paw4.jpg" alt="Layanan 2" class="img-fluid rounded shadow">
+                    <img src="img/LSCP3.png" alt="Layanan 2" class="img-fluid rounded shadow">
                 </div>
                 <!-- Layanan 2 -->
                 <div class="col-lg-6">
-                    <h2 class="mb-3">Emergency Pet Care</h2>
+                    <h2 class="mb-3">Layanan Kami untuk Semua Jenis Hewan</h2>
                     <p>
-                        Kami Ada Saat Anda Sangat Membutuhkan Kami. Andara Vet menyediakan jasa bedah/operasi serta didukung teknologi dan peralatan seperti USG, X-Ray (Coming Soon), Inhalasi serta berbagai kebutuhan laboratorium sehingga diagnosa dan penanganan dokter menjadi
-                        lebih tepat.
+                        Klinik Hewan Andara tidak hanya melayani hewan peliharaan biasa, tetapi juga hewan kecil, eksotik, ternak, dan unggas. Tim dokter kami memiliki keahlian khusus untuk menangani berbagai spesies dengan pendekatan yang aman dan tepat. <br>-
+                        Hewan Kecil: Pemeriksaan rutin, vaksinasi, dan perawatan darurat untuk anjing, kucing, kelinci, dan lainnya. <br>- Hewan Eksotik: Perawatan medis untuk reptil, burung, dan hewan eksotik lainnya. <br>- Ternak & Unggas: Vaksinasi,
+                        pemeriksaan kesehatan, dan penanganan penyakit untuk sapi, kambing, domba, serta unggas. <br> Kami berkomitmen memberikan perawatan terbaik untuk semua hewan kesayangan Anda, dengan layanan yang disesuaikan untuk setiap spesies.
                     </p>
                     <a href="https://wa.me/628170791919?text=Halo,%20saya%20ingin%20bertanya%20tentang%20layanan%20Andara%20Vet." target="_blank" class="btn btn-outline-success">
                         Hubungi Andara Vet
@@ -93,19 +102,22 @@
     <section id="vaksin" class="py-5">
         <div class="container text-center">
             <!-- Header -->
-            <h5 class="text-uppercase text-primary">Vaksin</h5>
-            <h2 class="mb-4">Mengapa Vaksinasi Penting Untuk Kucing Dan Anjing?</h2>
+            <h5 class="text-uppercase text-primary">Instalasi Rawat Inap</h5>
+            <h2 class="mb-4">Instalasi Rawat Inap yang Nyaman dan Mendukung Penyembuhan</h2>
 
             <!-- Gambar dan Deskripsi -->
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <img src="img/paw5.jpg" alt="Vaksinasi" class="img-fluid rounded shadow mb-4">
+                    <img src="img/LSCP4.png" alt="Vaksinasi" class="img-fluid rounded shadow mb-4">
                     <p>
-                        Vaksinasi adalah cara paling efektif untuk melindungi kucing dan anjing Anda dari penyakit yang bisa berakibat fatal. Sama seperti manusia, hewan peliharaan juga rentan terhadap berbagai penyakit infeksi. Vaksin ini membantu tubuh mereka mengenali dan
-                        melawan virus atau bakteri penyebab penyakit tersebut.
+                        Klinik Hewan kami dilengkapi dengan instalasi rawat inap yang modern dan nyaman, dirancang khusus untuk mendukung proses penyembuhan hewan kesayangan Anda. Dengan fasilitas yang lengkap dan lingkungan yang aman, kami memastikan hewan peliharaan Anda mendapatkan
+                        perawatan intensif yang mereka butuhkan, baik untuk pemulihan pasca-operasi, pengobatan jangka panjang, atau perawatan darurat.
+
+
                     </p>
                     <p>
-                        Dapatkan pelayan dan jadwalkan vaksinasi rutin untuk menjaga kesehatan hewan kesayangan Anda!
+                        Kami memprioritaskan kenyamanan dan kesehatan hewan selama masa rawat inap, dengan pengawasan 24 jam oleh tenaga medis yang berpengalaman. Pemilik hewan juga dapat merasa tenang, karena kami selalu memberikan update berkala tentang kondisi hewan mereka.
+                        Dengan fasilitas rawat inap yang lengkap dan perawatan yang penuh perhatian, Anda dapat mempercayakan kesembuhan hewan peliharaan Anda kepada kami tanpa khawatir.
                     </p>
                 </div>
             </div>
@@ -117,15 +129,14 @@
     <section id="location" class="py-5">
         <div class="container text-center">
             <!-- Header -->
-            <h5 class="text-uppercase text-primary">Vaksin</h5>
+            <h5 class="text-uppercase text-primary">Lokasi</h5>
             <h2 class="mb-4">Lokasi Klinik Dokter Hewan Andara Vet!</h2>
 
-            <!-- Google Maps Embed -->
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.8412171634623!2d112.718497!3d-7.277497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fbf02c20e89b%3A0x7d5bf1b5f9799cfa!2sKlinik%20Dokter%20Hewan%20PawPaw!5e0!3m2!1sen!2sid!4v1691234567890!5m2!1sen!2sid"
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.4306757328943!2d106.801660!3d-6.313137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNsKwMTgnNDcuMyJTIDEwNsKwNDgnMDUuOSJF!5e0!3m2!1sen!2sid!4v1691234567890!5m2!1sen!2sid"
                         width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+                    </iframe>
                 </div>
             </div>
 
@@ -146,9 +157,9 @@
             <div class="row">
                 <!-- Logo dan Alamat -->
                 <div class="col-md-6">
-                    <img src="logo.png" alt="Andara Vet Clinic" class="mb-3" style="width: 150px;">
+                    <!-- <img src="logo.png" alt="Andara Vet Clinic" class="mb-3" style="width: 150px;"> -->
                     <p>
-                        ANDARA VET CLINIC<br> Golf Island, Kota Beach Theme Park, Jl. Pantai Indah Kapuk No.162 Blok R5E, Pantai Indah, DKI Jakarta 14460
+                        ANDARA VET CLINIC<br> Jl. Margasatwa, Pondok Labu, Cilandak, DKI Jakarta 12450
                     </p>
                 </div>
 
